# free-planning-poker

./: .env.example  .eslintrc.cjs  .gitignore  .release-it.json  .wtp.yml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LOGGING.md  README.md  commitlint.config.js  commitlint.config.ts  doppler.yaml  drizzle.config.ts  eslint.config.mjs  instrumentation-client.ts  instrumentation.ts  lefthook.yml  logdy.config.json  next.config.js  next.config.mjs  package-lock.json  package.json  postcss.config.cjs  prettier.config.cjs  renovate.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  sonar-project.properties  tailwind.config.js  tailwind.config.mjs  tailwind.config.ts  tsconfig.json  vercel.json
.claude/commands/: release-fpp.md
.github/: pr-commenter.yml
.github/lighthouse/: budget.json
.github/workflows/: analytics.yml  comment.yml  lighthouse.yml  lighthouse_new.yml  release.yml  sonarcloud.yml  validate.yml
.husky/: commit-msg
.openspec/: project.md
.openspec/specs/: api.template.md  cross-component.template.md  database.template.md  state.template.md  ui.template.md
analytics/: .env.example  Dockerfile  app.py  config.py  passenger_wsgi.py  requirements.txt
analytics/room/: calc_room_stats.py
analytics/scripts/: calc_behaviour.py  calc_daily_analytics.py  calc_historical.py  calc_location_and_user_agent.py  calc_reoccurring.py  calc_traffic.py  calc_votes.py  update_read_model.py
analytics/util/: log_util.py  number_util.py  send_email_util.py
drizzle/: 0000_romantic_black_bird.sql  0001_tidy_switch.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
fpp-analytics/: .env.example  .gitignore  CLAUDE.md  README.md  config.py  main.py  pyproject.toml  sonar-project.properties  update_readmodel.py
fpp-analytics/calculations/: __init__.py  behaviour.py  daily.py  historical.py  location.py  reoccurring.py  room_stats.py  traffic.py  votes.py
fpp-analytics/routers/: __init__.py  analytics.py  health.py  room.py
fpp-analytics/util/: __init__.py  cache.py  http_client.py  sentry_wrapper.py
fpp-server/: .env.example  .prettierignore  .prettierrc.json  CLAUDE.md  README.md  bun.lockb  eslint.config.mjs  package.json  sonar-project.properties  tsconfig.json
fpp-server/src/: index.ts  message.handler.ts  room.actions.ts  room.entity.ts  room.state.ts  room.types.ts  types.ts  utils.ts  websocket.constants.ts
openspec/: config.yaml
prisma/: schema.prisma
public/: browserconfig.xml  robots.txt  site.webmanifest  sitemap.xml
src/: env.mjs  env.ts  middleware.ts  proxy.ts
src/components/: footer.tsx  hero.tsx  interactions.tsx  markdown.tsx  meta.tsx  table.tsx  username-model.tsx  websocket-receiver.tsx
src/constants/: error.constant.ts  error.constants.ts  fibonacci.constant.ts  logging.constant.ts  sentry.constant.ts  websocket.constants.ts
src/hooks/: useViewMode.ts  (+11 more)
(+167 files in other folders)
