[project]
name = "fpp-analytics"
version = "2.0.0"
description = "Free Planning Poker Analytics - FastAPI + Polars"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.34.0",
    # Data processing
    "polars>=1.34.0",
    # Database (direct connection, same docker network)
    "pymysql>=1.1.0",
    # HTTP client (email service, UptimeKuma)
    "httpx>=0.28.0",
    # Monitoring
    "sentry-sdk[fastapi]>=2.40.0",
    # Environment
    "python-dotenv>=1.0.0",
    "python-json-logger>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["calculations", "routers", "util"]
include = ["main.py", "config.py", "update_readmodel.py"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Function call in defaults (FastAPI Depends)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["calculations", "routers", "util"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["polars.*", "httpx.*", "pymysql.*"]
ignore_missing_imports = true
